// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`run <script> --ignore package-@(2|3|4) 1`] = `
Array [
  "packages/package-1 my-script",
]
`;

exports[`run <script> --parallel 1`] = `
Array [
  "packages/package-1 env",
  "packages/package-2 env",
  "packages/package-3 env",
  "packages/package-4 env",
]
`;

exports[`run <script> --scope @test/package-2 --include-filtered-dependencies 1`] = `
Array [
  "packages/package-1 my-script",
  "packages/package-2 my-script",
]
`;

exports[`run <script> --scope package-1 1`] = `
Array [
  "packages/package-1 my-script",
]
`;

exports[`run <script> --since 1`] = `
Array [
  "packages/package-3 my-script",
]
`;

exports[`run <script> --stream 1`] = `
Array [
  "packages/package-1 my-script",
  "packages/package-3 my-script",
]
`;

exports[`run <script> 1`] = `
Array [
  "packages/package-1 my-script",
  "packages/package-3 my-script",
]
`;

exports[`run env 1`] = `
Array [
  "packages/package-1 env",
  "packages/package-4 env",
  "packages/package-2 env",
  "packages/package-3 env",
]
`;
